# Diaballik

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  config.ini
bots/MCTSAI/: config.ini
doc/: documentation.tex
src/: AIPlayer.cpp  AIPlayer.h  CMakeLists.txt  GameHandler.cpp  GameHandler.h  GraphicsMovableTile.cpp  GraphicsMovableTile.h  GraphicsScene.cpp  GraphicsScene.h  GraphicsTile.cpp  GraphicsTile.h  HintAI.cpp  HintAI.h  HistoryHandler.cpp  HistoryHandler.h  HumanPlayer.cpp  HumanPlayer.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NewGameDialog.cpp  NewGameDialog.h  NewGameDialog.ui  Player.cpp  Player.h  PlayerInfo.cpp  PlayerInfo.h  SaveHandler.cpp  SaveHandler.h  SettingsHandler.cpp  SettingsHandler.h  StateHandler.cpp  StateHandler.h  constants.h  gameConstants.h  gameEnums.h  main.cpp
